<resources xmlns:https="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Yummy Meals</string>
    <string name="logo">logo</string>
    <string name="hintMobileNumber">MOBILE NUMBER(10 DIGITS)</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_now"><u>Don\'t have an account?Sign up now</u></string>
    <string name="name_min_3_characters">NAME (MIN. 3 CHARACTERS)</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="delivery_address">DELIVERY ADDRESS</string>
    <string name="password_min_4_characters" translatable="false">PASSWORD (MIN. 4 CHARACTERS)</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">Register</string>
    <string name="enter_your_registered_mobile_number_and_email_nbelow">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="preferenceFile">data</string>
    <string name="log_out"><u>Log out</u></string>
    <string name="otp_4_characters">OTP(4 CHARACTERS)</string>
    <string name="new_password">NEW PASSWORD (MIN. 4 CHARACTERS)</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="name">Name</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="restaurant">Restaurant</string>
    <string name="_300_person">300/person</string>
    <string name="_4_7">4.7</string>
    <string name="_1">1.</string>
    <string name="item_name">Item Name</string>
    <string name="add">Add</string>
    <string name="_91_8888888888">+91–8888888888</string>
    <string name="sample_email_com">sample@gmail.com</string>
    <string name="address">Address</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose From Menu Listed Below</string>
    <string name="remove">Remove</string>
    <string name="rs_400">Rs. 400</string>
    <string name="ordering_from">Ordering From : </string>
    <string name="place_order_price">Place Order(Price)</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="_12_04_20">12/04/20</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="you_don_t_have_any_favourite_restaurants">You don\'t have any favourite restaurants</string>
    <string name="you_have_not_placed_any_orders">You have not placed any orders</string>
    <string name="q1">Q.1 What kind of restaurants are listed on Yummy Meals?</string>
    <string name="a1">We have more than 15+ top restaurants listed. Our restaurants offer multiple cuisine options including Chinese, Indian, Burgers, Pizza, Tadkas, Smoothie and so on. You name it, we have it!</string>
    <string name="a2"><![CDATA[In order to keep the food fresh and hot, we deliver up to 7–8 km from our partnered restaurant. We are expanding rapidly and we will be delivering in your area very soon. ]]></string>
    <string name="q2">Q.2 Why aren\'t you delivering to my area yet?</string>
    <string name="q3">Q.3 Can I place a take away order as well?</string>
    <string name="a3">Yes you can place take away order at no extra cost and pick it up whenever you want.</string>
    <string name="q4">Q.4 How much do you charge for delivery fee?</string>
    <string name="a4">We charge a fixed delivery fee of Rs.200 (up to 4 km) and Rs.60 per additional km over 4 kms.</string>
    <string name="a5">We deliver up to 7–8 km from our partnered restaurant which is almost double the distance as compared to other delivery companies.</string>
    <string name="q5">Q.5 How far do you deliver from your partnered restaurant?</string>
    <string name="q6">Q.6 How long will it take for my order to be delivered?</string>
    <string name="a6">Our average delivery time is between 30–40 min once we receive the order. Delivery time depends on a lot of factors such as restaurant’s order volume, our current order volume, traffic, weather, overall distance, order size etc. We always try to do our best and if there is any delay, we always try to convey it to you.</string>
    <string name="a7"><![CDATA[Yes you can track your order using GPS. Once the driver starts the delivery you will receive a link on your phone/computer. Just tap on that link and you can track your order in real time.]]></string>
    <string name="q7">Q.7 Can I track my order?</string>
    <string name="q8">Q.8 How can I know about your latest offers and promotions?</string>
    <string name="a8">We keep giving special offers and discounts to our customers. Please follow our page \'Yummy Meals\' on facebook to enjoy our latest offers and promotions.</string>
    <string name="q9">Q.9 Can I edit my order?</string>
    <string name="a9">Your order can be edited before it reaches the restaurant. Call us on +91 8086284556 or email us at info@yummymeals.co.in to do so. Once the order is placed and the restaurant starts preparing your food, you may not be able to edit its contents.</string>
    <string name="a10">Any major change in delivery address is not possible after you have placed an order with us. However, slight modifications like changing the flat number, street name, landmark etc. are allowed. Please get in touch with our team for that.</string>
    <string name="q10">Q.10 Can I change the delivery address after placing the order?</string>
    <string name="q11">Q.11 I have a big party coming up, can I get some special discount?</string>
    <string name="a11">For party arrangements and bulk orders we can offer some special offers and discounts. Get in touch with us at info@yummymeals.co.in</string>
    <string name="query">Got Some Questions in mind? We would love to answer any other query at +91–8086284556 or query@yummymeals.co.in</string>
    <string name="sort">Sort</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="search">Search</string>
    <string name="itemRupees">Rs. %1$s</string>
    <string name="place_order">Place Order(Rs. %1d)</string>
    <string name="favourite">favourite</string>
    <string name="restaurantImage">RestaurantImage</string>
    <string name="nohistory">NoHistory</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>
    <string name="frequentlyaskedquestions">Frequently Asked Questions</string>

</resources>
