<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q1"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a1"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q2"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a2"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q3"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a3"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q4"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a4"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q5"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a5"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q6"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a6"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q7"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a7"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q8"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a8"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q9"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a9"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q10"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a10"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/q11"
            android:textColor="@color/secondaryTxt"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:text="@string/a11"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/query"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    </LinearLayout>

</ScrollView>
