<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:cropToPadding="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_mobile_number_and_email_nbelow"
        android:padding="10dp"
        android:textSize="17sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:lineSpacingExtra="3sp"
        android:fontFamily="sans-serif" />

    <EditText
        android:id="@+id/otp_etOtp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hintMobileNumber"
        android:inputType="number"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:drawableStart="@drawable/ic_phone2"
        android:drawablePadding="6dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:maxLength="10" />

    <EditText
        android:id="@+id/otp_etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColor="@color/black"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="6dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:maxLines="1" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="6dp">

        <Button
            android:id="@+id/forgot_btnNext"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/next"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:fontFamily="sans-serif" />
    </androidx.cardview.widget.CardView>

    <include layout="@layout/layout_progressbar" />
</LinearLayout>