<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="0dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/profile_icon"
            android:cropToPadding="true"
            android:contentDescription="@string/profile_photo" />
    </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:padding="6dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-condensed-light" />


    <TextView
        android:id="@+id/txtUserNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/_91_8888888888"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="6dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-light" />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_email_com"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="6dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-light" />

    <TextView
        android:id="@+id/txtUserAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="6dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-light" />
</LinearLayout>
</androidx.cardview.widget.CardView>