<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:cropToPadding="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/login_etNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/hintMobileNumber"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:drawableStart="@drawable/ic_smartphone_black_24dp"
        android:drawablePadding="6dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="1"
        android:maxLength="10"
        android:layout_below="@id/imgLogo"
        android:autofillHints="number" />

    <EditText
        android:id="@+id/login_etPassword"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="6dp"
        android:textSize="15sp"
        android:fontFamily="sans-serif-condensed"
        android:maxLines="1"
        android:maxLength="20"
        android:layout_below="@id/login_etNumber" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cLButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_below="@id/login_etPassword"
        android:layout_marginTop="25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp">


            <Button
                android:id="@+id/login_btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/login"
                android:background="@color/colorButton"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:fontFamily="sans-serif" />
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/login_txtForgotPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/cardview_dark_background"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_below="@id/cLButtonLogin" />

    <TextView
        android:id="@+id/login_txtSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="20dp"
        android:textColor="@color/cardview_dark_background"
        android:text="@string/sign_up_now"
        android:textAlignment="center"
        android:textSize="15sp" />

    <include layout="@layout/layout_progressbar" />

</RelativeLayout>